[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "escommune_pkg"
version = "2026.3.22"
license = {text = "Apache-2.0"}
description = "EsCommune Opensource docs"
readme = "README.rst"
requires-python = ">=3.12"
authors = [{name = "alex"}]

dependencies = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0rc1",
    "sphinxemoji==0.3.1",
    "sphinx-copybutton==0.5.2"
]

[project.optional-dependencies]
scipy = ["scipy"]

[project.urls]
homepage = "https://escommune.readthedocs.io/"

