[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "escommune_pkg"
version = "2026.3.22"
license = {text = "Apache-2.0"}
description = "EsCommune Opensource docs"
readme = "README.rst"
requires-python = ">=3.12"
authors = [{name = "Min Jia"}]

dependencies = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.1.0",
    "sphinxemoji==0.3.1",
    "sphinx-copybutton==0.5.2"
]

[project.optional-dependencies]
scipy = ["scipy"]

[project.urls]
homepage = "https://escommune.readthedocs.io/"

